--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/mobile.css">
+	<link rel="stylesheet" href="./css/tablet.css">
+	<link rel="stylesheet" href="./css/desktop.css">
 </head>
 <body>
 	<div class="top-line">
@@ -81,7 +84,7 @@
 
 
 
-	<!-- <section class="section">
+	<section class="section">
 		<div class="container">
 		<h2 class="secondary-title visually-hidden">About us</h2>
 		<ul class="about-us list">
@@ -141,7 +144,7 @@
 			</li>
 		</ul>
 		</div>
-	</section>  -->
+	</section> 
 
 
 	<!--=================  ===WHAT WE ARE DOING---==== -->
@@ -336,46 +339,46 @@
 <!--===========================CUSTOMERS+========================== -->
 
 
-<!-- <section class="section">
+<section class="section">
 	<div class="container">
 	<h2 class="secondary-title">Customers</h2>
 	<ul class="customer-list">
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon" width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company1"></use>
 			</svg>
 			</a>
 		</li>
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon"  width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company2"></use>
 			</svg>
 			</a>
 		</li>
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon"  width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company3"></use>
 			</svg>
 			</a>
 		</li>
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon"  width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company4"></use>
 			</svg>
 			</a>
 		</li>
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon"  width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company5"></use>
 			</svg>
 			</a>
 		</li>
-		<li class="customer-list">
+		<li class="customer-linkk">
 			<a href="" class="customer-list-link">
 			<svg class="customer-list-icon"  width="104px" height="56px">
 				<use href="./images/icons.svg#icon-company6"></use>
@@ -384,7 +387,7 @@
 		</li>
 	</ul>
 </div>
-</section> -->
+</section>
 </main>
 
 
