--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<!--=================  ===WHAT WE ARE DOING---==== -->
 
 
-	<!-- <section class="section">
+	<section class="section wwad-none">
 		<div class="container">
 		<h2 class="secondary-title">What are we doing</h2>
 		<ul class="work-list list">
@@ -165,14 +165,14 @@
 			src="./images/iphone.jpg" alt="iphone" width="360"></li>
 		</ul>
 		</div>
-	</section> -->
+	</section>
 
 
 	<!-- ++++++++++++++++++++++++++++our team=========== -->
 
 
 
-<section class="team-list section">
+<!-- <section class="team-list section">
 	<div class="container">
 	<h2 class="secondary-title">Our Team</h2>
 	<ul class="workers-list list">
@@ -333,13 +333,13 @@
 		</li>
 	</ul>
 	</div>
-</section>
+</section> -->
 
 
 <!--===========================CUSTOMERS+========================== -->
 
 
-<section class="section">
+<!-- <section class="section">
 	<div class="container">
 	<h2 class="secondary-title">Customers</h2>
 	<ul class="customer-list">
@@ -388,7 +388,7 @@
 	</ul>
 </div>
 </section>
-</main>
+</main> -->
 
 
 <!-- ========================FOOTER===================== -->
