--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
 	<section class="section wwad-none">
-		<div class="container">
+		<div class="container div-none">
 		<h2 class="secondary-title">What are we doing</h2>
 		<ul class="work-list list">
 		<li class="work-list-photo"><img
@@ -172,7 +172,7 @@
 
 
 
-<!-- <section class="team-list section">
+<section class="team-list section">
 	<div class="container">
 	<h2 class="secondary-title">Our Team</h2>
 	<ul class="workers-list list">
@@ -181,7 +181,7 @@
 			srcset="./images/img1@2x.jpg 2x"
 			src="./images/img1.jpg" alt="Daniel Wilson"  width="264">
 			<div class="card-content">
-			<h3 class="subtitle">Daniel Wilson</h3>
+			<h3 class="workers-name">Daniel Wilson</h3>
 			<p class="text-title">UI Designer</p>
 	<ul class="social-list list">
 		<li class="social-list-item">
@@ -220,7 +220,7 @@
 			srcset="./images/img2@2x.jpg 2x"
 			src="./images/img2.jpg" alt="Camila Garcia" width="264">
 			<div class="card-content">
-			<h3 class="subtitle">Camila Garcia</h3>
+			<h3 class="workers-name">Camila Garcia</h3>
 			<p class="text-title">Marketing</p>
 			<ul class="social-list list">
 				<li class="social-list-item">
@@ -259,7 +259,7 @@
 			srcset="./images/img3@2x.jpg 2x" 
 			src="./images/img3.jpg" alt="Tom Ford" width="264">
 			<div class="card-content">
-			<h3 class="subtitle">Tom Ford</h3>
+			<h3 class="workers-name">Tom Ford</h3>
 			<p class="text-title">Frontend Developer</p>
 			<ul class="social-list list">
 				<li class="social-list-item">
@@ -298,7 +298,7 @@
 			srcset="./images/img4@2x.jpg 2x"
 			src="./images/img4.jpg" alt="Mark Guerrero" width="264">
 			<div class="card-content">
-			<h3 class="subtitle">Mark Guerrero</h3>
+			<h3 class="workers-name">Mark Guerrero</h3>
 			<p class="text-title">Product Designer</p><ul class="social-list list">
 				<li class="social-list-item">
 					<a href="" class="social-list-link">
@@ -333,7 +333,7 @@
 		</li>
 	</ul>
 	</div>
-</section> -->
+</section>
 
 
 <!--===========================CUSTOMERS+========================== -->
