--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <!--===========================CUSTOMERS+========================== -->
 
 
-<!-- <section class="section">
+<section class="section">
 	<div class="container">
 	<h2 class="secondary-title">Customers</h2>
 	<ul class="customer-list">
@@ -388,7 +388,8 @@
 	</ul>
 </div>
 </section>
-</main> -->
+
+</main>
 
 
 <!-- ========================FOOTER===================== -->
