--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
 
 
 
-<!-- <footer class="footer">
+<footer class="footer">
 	<div
 	class="container footer-container">
 		<div class="logo-text ">
-	<a href="" class=" logo link">
+	<a href="" class=" logo-footer link">
 	<span class="web">Web</span><span class="logo-fone-dark">Studio</span> 
 	</a>
 	<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -449,7 +449,7 @@
 </div>
 </div>
 
-</footer> -->
+</footer>
 
 <div class="backdrop is-hidden" data-modal>
 	<div class="modal">
