--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</ul>
 	</nav> 
 
-	<button type="button" class="mobile-menu-open" data-modal-open>
+	<button type="button" class="mobile-menu-open" data-menu-open>
 		<svg class="mobile-menu-open-icon" width="32px" height="22px">
 	<use href="./images/icons.svg#icon-hamburger-menu"></use>
 		</svg>
@@ -45,18 +45,24 @@
 	</ul>
 		</div>
 		
-		<div class="mobile-menu" data-modal>
-			<div class="container mobile-menu-container" data-modal-close >
+		<div class="mobile-menu" data-menu>
+			<div class="container mobile-menu-container" data-menu-close >
 			<button type="button" class="mobile-menu-close-btn">
-				<svg width="24px" height="24px">
+				<svg width="8px" height="8px">
 				<use href="./images/icons.svg#icon-close-model"></use>
 				</svg>
 			</button>
-			<ul>
-				<li>ggdf</li>
-				<li>ddsgdsg</li>
-				<li>grhr</li>
-				<li>grgregrfg</li>
+			<ul class=" mobile-menu-list">
+				<li class="mobile-menu-item">
+			
+					<a class=" mobile-menu-link link mobile-menu-current-page" href="index.html"> Studio </a>
+				</li>
+				<li class="mobile-menu-item">
+					<a class=" mobile-menu-link link " href="./portfolio.html"> Portfolio </a>
+				</li>
+				<li class="mobile-menu-item">
+					<a class="mobile-menu-link link" href=""> Contacts </a>
+				</li>
 			</ul>
 		</div>
 		</div>
@@ -74,7 +80,7 @@
 		<section class="hero section">
 			<div class="container">
 			<h1 class="main-title">Effective Solutions <br> for Your Business</h1>
-			<button class="hero-button" type="button" data-modal-open>Order Service</button>
+			<button class="hero-button" type="button"data-modal-open >Order Service</button>
 	</div>
 	</section>
 
@@ -452,7 +458,7 @@
 </footer>
 
 <div class="backdrop is-hidden" data-modal>
-	<div class="modal">
+	<div class="modal" >
 		<button type="button" class="modal-close-btn" data-modal-close>
 			<svg class="modal-close-btn-icon" width="18" height="18">
 				<use href="./images/icons.svg#icon-close-model"></use>
@@ -509,7 +515,6 @@
 		</form>
 	</div>
 </div>
-
 <script src="./js/modal.js"></script>
 <script defer src="./js/mobile-menu.js"></script>
 </body>
