--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
 			<a class="menu-link link" href=""> Contacts </a></li>
 	</ul>
 	</nav> 
-
-	<button type="button" class="mobile-menu-open" data-menu-open>
-		<svg class="mobile-menu-open-icon" width="32px" height="22px">
-	<use href="./images/icons.svg#icon-hamburger-menu"></use>
-		</svg>
-	</button>
-
 	<ul class="contacts-item list">
 		<li class="contacts-list list-email"><a class="contacts link" href="info@devstudio.com">info@devstudio.com</a></li>
 		<li class="contacts-list list-tel"><a class="contacts link" href="+110001111111">+11 (000) 111-11-11</a></li>
 	</ul>
-		</div>
 		
+
+		<button type="button" class="mobile-menu-open" data-menu-open>
+			<svg class="mobile-menu-open-icon" width="32px" height="22px">
+				<use href="./images/icons.svg#icon-hamburger-menu"></use>
+			</svg>
+		</button>
+		</div>
+
 		<div class="mobile-menu" data-menu>
 			<div class="container mobile-menu-container" data-menu-close >
+				<div class="mob-menu-top">
 			<button type="button" class="mobile-menu-close-btn">
-				<svg width="8px" height="8px">
+				<svg class="mobile-menu-close-btn-icon" width="8px" height="8px">
 				<use href="./images/icons.svg#icon-close-model"></use>
 				</svg>
 			</button>
@@ -64,6 +65,46 @@
 					<a class="mobile-menu-link link" href=""> Contacts </a>
 				</li>
 			</ul>
+			</div>
+			<div class="mob-menu-bottom">
+			<ul class="contacts-mobile-item list">
+				<li class="contacts-mobile-list mobile-list-tel"><a class="contacts link" href="+110001111111">+11 (000) 111-11-11</a>
+				</li>
+				<li class="contacts-mobile-list mobile-list-email"><a class="contacts link" href="info@devstudio.com">info@devstudio.com</a></li>
+				
+			</ul>
+
+			<ul class="social-list list">
+				<li class="social-list-item">
+					<a href="" class="social-list-link">
+						<svg class="social-list-icon" width="16px" height="16px">
+							<use href="./images/icons.svg#icon-instagram"></use>
+						</svg>
+					</a>
+				</li>
+				<li class="social-list-item">
+					<a href="" class="social-list-link">
+						<svg class="social-list-icon" width="16px" height="16px">
+							<use href="./images/icons.svg#icon-twitter"></use>
+						</svg>
+					</a>
+				</li>
+				<li class="social-list-item">
+					<a href="" class="social-list-link">
+						<svg class="social-list-icon" width="16px" height="16px">
+							<use href="./images/icons.svg#icon-facebook"></use>
+						</svg>
+					</a>
+				</li>
+				<li class="social-list-item">
+					<a href="" class="social-list-link">
+						<svg class="social-list-icon" width="16px" height="16px">
+							<use href="./images/icons.svg#icon-linkedin2"></use>
+						</svg>
+					</a>
+				</li>
+			</ul>
+			</div>
 		</div>
 		</div>
 	</header>
