--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 					<a class=" mobile-menu-link link " href="./portfolio.html"> Portfolio </a>
 				</li>
 				<li class="mobile-menu-item">
-					<a class="mobile-menu-link link" href=""> Contacts </a>
+					<a class="mobile-menu-link contact-blue link" href=""> Contacts </a>
 				</li>
 			</ul>
 			</div>
 			<div class="mob-menu-bottom">
 			<ul class="contacts-mobile-item list">
-				<li class="contacts-mobile-list mobile-list-tel"><a class="contacts link" href="+110001111111">+11 (000) 111-11-11</a>
+				<li class="contacts-mobile list mobile-list-tel"><a class="contacts-mob link" href="+110001111111">+11 (000) 111-11-11</a>
 				</li>
-				<li class="contacts-mobile-list mobile-list-email"><a class="contacts link" href="info@devstudio.com">info@devstudio.com</a></li>
+				<li class="contacts-mobile list mobile-list-email"><a class="contacts-em link" href="info@devstudio.com">info@devstudio.com</a></li>
 				
 			</ul>
 
